Add c.reg hyperpars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,9 +219,15 @@ S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.dbscan)
 S3method(makeRLearner,cluster.kkmeans)
 S3method(makeRLearner,cluster.kmeans)
+S3method(makeRLearner,fdaclassif.knn)
+S3method(makeRLearner,fdaoneclass.anomalous)
+S3method(makeRLearner,fdaoneclass.kslad)
+S3method(makeRLearner,fdaoneclass.slad)
+S3method(makeRLearner,fdaregr.FDboost)
 S3method(makeRLearner,multilabel.cforest)
 S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,multilabel.randomForestSRC)
+S3method(makeRLearner,oneclass.svdd)
 S3method(makeRLearner,oneclass.svm)
 S3method(makeRLearner,regr.GPfit)
 S3method(makeRLearner,regr.IBk)
@@ -417,9 +423,15 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.dbscan)
 S3method(predictLearner,cluster.kkmeans)
 S3method(predictLearner,cluster.kmeans)
+S3method(predictLearner,fdaclassif.knn)
+S3method(predictLearner,fdaoneclass.anomalous)
+S3method(predictLearner,fdaoneclass.kslad)
+S3method(predictLearner,fdaoneclass.slad)
+S3method(predictLearner,fdaregr.FDboost)
 S3method(predictLearner,multilabel.cforest)
 S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,multilabel.randomForestSRC)
+S3method(predictLearner,oneclass.svdd)
 S3method(predictLearner,oneclass.svm)
 S3method(predictLearner,regr.GPfit)
 S3method(predictLearner,regr.IBk)
@@ -502,6 +514,8 @@ S3method(print,ClassifTask)
 S3method(print,ClusterTask)
 S3method(print,ConfusionMatrix)
 S3method(print,CostSensTask)
+S3method(print,FDAOneClassTask)
+S3method(print,FDATask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
 S3method(print,FeatSelResult)
@@ -670,9 +684,15 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.dbscan)
 S3method(trainLearner,cluster.kkmeans)
 S3method(trainLearner,cluster.kmeans)
+S3method(trainLearner,fdaclassif.knn)
+S3method(trainLearner,fdaoneclass.anomalous)
+S3method(trainLearner,fdaoneclass.kslad)
+S3method(trainLearner,fdaoneclass.slad)
+S3method(trainLearner,fdaregr.FDboost)
 S3method(trainLearner,multilabel.cforest)
 S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,multilabel.randomForestSRC)
+S3method(trainLearner,oneclass.svdd)
 S3method(trainLearner,oneclass.svm)
 S3method(trainLearner,regr.GPfit)
 S3method(trainLearner,regr.IBk)
@@ -923,6 +943,9 @@ export(makeCostSensWeightedPairsWrapper)
 export(makeCustomResampledMeasure)
 export(makeDownsampleWrapper)
 export(makeDummyFeaturesWrapper)
+export(makeFDAClassifTask)
+export(makeFDAOneClassTask)
+export(makeFDARegrTask)
 export(makeFeatSelControlExhaustive)
 export(makeFeatSelControlGA)
 export(makeFeatSelControlRandom)
@@ -931,6 +954,7 @@ export(makeFeatSelWrapper)
 export(makeFilter)
 export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
+export(makeFixedHoldoutInstances)
 export(makeImputeMethod)
 export(makeImputeWrapper)
 export(makeLearner)
@@ -1038,6 +1062,7 @@ export(measureTN)
 export(measureTNR)
 export(measureTP)
 export(measureTPR)
+export(measureWAC)
 export(measureWKAPPA)
 export(medae)
 export(medse)
@@ -1146,6 +1171,7 @@ export(tuneParams)
 export(tuneParamsMultiCrit)
 export(tuneThreshold)
 export(undersample)
+export(wac)
 export(wkappa)
 import(BBmisc)
 import(ParamHelpers)
